--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -65,6 +65,23 @@
     transform: scale(0.95);
   }
 }
+.buttonRoundBrown {
+  background-color: $brown;
+  border: 1px solid transparent;
+  color: white;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  padding: 7px 15px;
+  cursor: pointer;
+  transition: all 0.1s linear;
+  &:hover {
+    background-color: $lightGreen;
+    
+  }
+  &:active {
+    transform: scale(0.95);
+  }
+}
 .buttonPriceGreen {
   background-color: $green;
   border: 1px solid transparent;
