--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -1307,17 +1307,18 @@ span.fakeTextBreaks {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.2s linear;
+  transition: all 0.1s linear;
 }
 
 .popupActive {
   visibility: visible;
   opacity: 1;
+  z-index: 100;
 }
 
 .loginMain {
   position: relative;
-  padding: 40px;
+  padding: 20px 40px;
   background-color: white;
   border-radius: 20px;
   display: flex;
@@ -1326,6 +1327,23 @@ span.fakeTextBreaks {
   align-items: center;
   width: 450px;
   height: 600px;
+}
+.loginMain .buttonSquareBrown {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  padding: 3px 10px;
+  margin-left: 10px;
+}
+.loginMain .buttonSignUp {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #00BF58;
+  border-bottom: 1px solid #00BF58;
+}
+.loginMain .buttonSignUp:hover {
+  color: #755146;
+  border-bottom: 1px solid #755146;
 }
 .loginMain .closeIcon {
   cursor: pointer;
@@ -1391,6 +1409,10 @@ span.fakeTextBreaks {
 .loginMain .loginOptions a {
   color: #00BF58;
   border-bottom: 1px solid #00BF58;
+}
+.loginMain .loginOptions a:hover {
+  color: #755146;
+  border-bottom: 1px solid #755146;
 }
 .loginMain .loginOptions input {
   margin-right: 10px;
@@ -1481,7 +1503,7 @@ span.fakeTextBreaks {
 
 .signupMain {
   position: relative;
-  padding: 40px;
+  padding: 20px 40px;
   background-color: white;
   border-radius: 20px;
   display: flex;
@@ -1490,6 +1512,22 @@ span.fakeTextBreaks {
   align-items: center;
   width: 450px;
   height: 600px;
+}
+.signupMain h3 {
+  margin-bottom: 20px;
+}
+.signupMain .redirectText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.7rem;
+  color: rgb(170, 170, 170);
+}
+.signupMain .buttonSquareBrown {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  padding: 3px 10px;
+  margin-left: 10px;
 }
 .signupMain .closeIcon {
   cursor: pointer;
@@ -1508,10 +1546,11 @@ span.fakeTextBreaks {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
 }
 .signupMain form div {
   width: 100%;
-  margin-top: 15px;
+  margin-top: 5px;
 }
 .signupMain form input {
   width: 100%;
@@ -1520,7 +1559,12 @@ span.fakeTextBreaks {
   border: none;
   border-radius: 10px;
   font-size: 0.8rem;
-  padding: 5px 10px;
+  padding: 3px 10px;
+  outline: none;
+  border: 2px solid transparent;
+}
+.signupMain form input:focus {
+  border: 2px solid #31795A;
 }
 .signupMain form label {
   font-size: 0.7rem;
@@ -1533,6 +1577,69 @@ span.fakeTextBreaks {
 }
 .signupMain form .nameGroup div {
   width: calc(50% - 10px);
+}
+.signupMain .accountType {
+  width: 100%;
+  height: 30px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  background-color: #EFF6F3;
+}
+.signupMain .accountType .slider {
+  position: absolute;
+  width: 50%;
+  height: 30px;
+  border-radius: 20px;
+  background-color: #755146;
+  z-index: 5;
+  transition: all 0.1s linear;
+  top: 0;
+  left: 0;
+}
+.signupMain .accountType label {
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 20px;
+  padding: 5px 20px;
+  width: 100%;
+  height: 30px;
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 20;
+  transition: color 0.1s linear;
+  transition-delay: 0.1s;
+  color: rgb(170, 170, 170);
+}
+.signupMain .accountType input[type=radio]:checked + label {
+  color: white;
+}
+.signupMain .accountCandidate {
+  width: 50%;
+  left: 0;
+  top: 0;
+  border-radius: 20px;
+}
+.signupMain .accountEmployer {
+  width: 50%;
+  right: 0;
+  top: 0;
+  border-radius: 20px;
+}
+.signupMain .authSignup {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.signupMain .authSignup button {
+  width: 45%;
 }
 
 .signupBreak {
@@ -1563,6 +1670,12 @@ span.fakeTextBreaks {
   left: 0;
   top: 10px;
   z-index: 1;
+}
+
+.signupButton {
+  width: 100%;
+  padding: 10px 0;
+  margin-top: 20px;
 }
 
 .pricingHeader {
@@ -1848,11 +1961,33 @@ h1 {
 }
 .jobsHeader nav {
   position: relative;
-  z-index: 100;
+  z-index: 10;
   background-color: #EFF6F3;
 }
 .jobsHeader span {
   margin-bottom: 60px;
+}
+
+.popupActive .loginReminder {
+  width: 450px;
+  height: 150px;
+  background-color: #EFF6F3;
+  padding: 35px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.popupActive .loginReminder div {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.popupActive .loginReminder button {
+  width: 35%;
 }
 
 .jobListings .loader {
@@ -2190,6 +2325,25 @@ h1 {
   align-items: flex-start;
   justify-content: space-between;
   padding: 100px 0 50px 0;
+  position: relative;
+}
+.jobDetails .annoyingLink {
+  position: absolute;
+  top: 35px;
+  width: 60px;
+  border-bottom: 1px solid #00BF58;
+  padding: 0;
+}
+.jobDetails .annoyingLink a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.7rem;
+  color: #00BF58;
+}
+.jobDetails .annoyingLink a svg {
+  height: 20px;
+  width: 20px;
 }
 .jobDetails .detailsOverview,
 .jobDetails .detailsDescription,
