--- a/src/styles/layout/_signup.scss
+++ b/src/styles/layout/_signup.scss
@@ -24,7 +24,7 @@
 
 .signupMain {
   position: relative;
-  padding: 40px;
+  padding: 20px 40px;
   background-color: white;
   border-radius: 20px;
   display: flex;
@@ -33,6 +33,22 @@
   align-items: center;
   width: 450px;
   height: 600px;
+  h3 {
+    margin-bottom: 20px;
+  }
+  .redirectText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+    color: $darkGrey;
+  }
+  .buttonSquareBrown {
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    padding: 3px 10px;
+    margin-left: 10px;
+  }
   .closeIcon {
     cursor: pointer;
     position: absolute;
@@ -50,9 +66,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
     div {
       width: 100%;
-      margin-top: 15px;
+      margin-top: 5px;
     }
     input {
       width: 100%;
@@ -61,7 +78,12 @@
       border: none;
       border-radius: 10px;
       font-size: 0.8rem;
-      padding: 5px 10px;
+      padding: 3px 10px;
+      outline: none;
+      border: 2px solid transparent;
+      &:focus {
+        border: 2px solid $green;
+      }
     }
     label {
       font-size: 0.7rem;
@@ -74,6 +96,70 @@
       div {
         width: calc(100% / 2 - 10px);
       }
+    }
+  }
+  .accountType {
+    width: 100%;
+    height: 30px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    background-color: $greenBg;
+    .slider {
+      position: absolute;
+      width: 50%;
+      height: 30px;
+      border-radius: 20px;
+      background-color: $brown;
+      z-index: 5;
+      transition: all 0.1s linear;
+      top: 0;
+      left: 0;
+    }
+
+    label {
+      cursor: pointer;
+      background-color: transparent;
+      border-radius: 20px;
+      padding: 5px 20px;
+      width: 100%;
+      height: 30px;
+      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      z-index: 20;
+      transition: color 0.1s linear;
+      transition-delay: 0.1s;
+      color: $darkGrey;
+    }
+    input[type="radio"]:checked + label {
+      color: white;
+    }
+  }
+  .accountCandidate {
+    width: 50%;
+    left: 0;
+    top: 0;
+    border-radius: 20px;
+  }
+  .accountEmployer {
+    width: 50%;
+    right: 0;
+    top: 0;
+    border-radius: 20px;
+  }
+  .authSignup {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+    button {
+      width: 45%;
     }
   }
 }
@@ -104,4 +190,9 @@
   left: 0;
   top: 10px;
   z-index: 1;
+}
+.signupButton {
+  width: 100%;
+  padding: 10px 0;
+  margin-top: 20px;
 }
