--- a/src/styles/pages/_jobDetails.scss
+++ b/src/styles/pages/_jobDetails.scss
@@ -13,7 +13,25 @@
   align-items: flex-start;
   justify-content: space-between;
   padding: 100px 0 50px 0;
-
+  position: relative;
+  .annoyingLink {
+    position: absolute;
+    top: 35px;
+    width: 60px;
+    border-bottom: 1px solid $lightGreen;
+    padding: 0;
+    a {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 0.7rem;
+      color: $lightGreen;
+      svg {
+        height: 20px;
+        width: 20px;
+      }
+    }
+  }
   .detailsOverview,
   .detailsDescription,
   .detailsResponsibilities,
@@ -56,7 +74,6 @@
   }
 }
 .jobDetailsRight {
-
   position: sticky;
   right: 0;
   top: 40px;
@@ -68,7 +85,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-    h4 {
+  h4 {
     font-size: 0.9rem;
     font-weight: lighter;
   }
