--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -8,11 +8,32 @@
   background-color: $greenBg;
   nav {
     position: relative;
-    z-index: 100;
+    z-index: 10;
     background-color: $greenBg;
   }
   span {
     margin-bottom: 60px;
+  }
+}
+.popupActive .loginReminder {
+  width: 450px;
+  height: 150px;
+  background-color: $greenBg;
+  padding: 35px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  div {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  button {
+    width: 35%;
   }
 }
 .jobListings {
@@ -313,3 +334,4 @@
     width: 110px;
   }
 }
+
