--- a/src/styles/layout/_login.scss
+++ b/src/styles/layout/_login.scss
@@ -85,7 +85,7 @@
     width: 100%;
     margin-bottom: 20px;
   }
-  form {
+  .popupForm {
     width: 100%;
     display: flex;
     flex-direction: column;
