--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -8,7 +8,7 @@
   background-color: $greenBg;
   nav {
     position: relative;
-    z-index: 100;
+    z-index: 10;
     background-color: $greenBg;
   }
 }
@@ -82,7 +82,7 @@
   width: 100px;
 }
 .contactUs {
-  form {
+  .contactForm {
     width: 100%;
     display: flex;
     flex-direction: column;
