--- a/src/styles/layout/_signup.scss
+++ b/src/styles/layout/_signup.scss
@@ -94,6 +94,9 @@
         justify-content: space-between;
         align-items: center;
         margin: 0;
+        span {
+          margin: 0;
+        }
       }
     }
     .passVisibility {
