--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -23,7 +23,7 @@ nav {
   // top: 0;
 }
 .navLogo {
-  min-width: 20%;
+  // min-width: 20%;
   img {
     width: 90px;
   }
@@ -73,16 +73,18 @@ nav {
     position: absolute;
     height: 0px;
     top: 30px;
-    left: -199px;
+    left: -65px;
     transition: all 0.1s linear;
     overflow: hidden;
-    border: 1px solid $darkGreen;
+    border: 2px solid $darkGreen;
+    // border-top: none;
     border-radius: 5px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 480px;
+    width: 210px;
+    // background: linear-gradient(0deg, $greenBg 70%, rgba(253, 187, 45, 0) 100%);
     li {
       padding: 5px 0;
       margin: 5px 0;
@@ -96,7 +98,7 @@ nav {
   .slideOut {
     visibility: visible;
     opacity: 1;
-    height: 250px;
+    height: 190px;
     li {
       width: 90%;
       text-align: center;
@@ -163,7 +165,7 @@ h1 {
   }
   input[type="text"] {
     border: none;
-     border-bottom: 2px solid transparent;
+    border-bottom: 2px solid transparent;
   }
 }
 .headerSearchLeft {
