--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -23,7 +23,7 @@ nav {
   // top: 0;
 }
 .navLogo {
-  // min-width: 20%;
+  min-width: 20%;
   img {
     width: 90px;
   }
@@ -201,6 +201,23 @@ h1 {
     font-weight: bold;
     color: black;
     margin-right: 10px;
+  }
+}
+.popupActive .logoutReminder {
+  width: 410px;
+  border-radius: 20px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 180px;
+  background-color: white;
+  div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 .headerStats {
