--- a/src/styles/layout/_signup.scss
+++ b/src/styles/layout/_signup.scss
@@ -32,6 +32,13 @@
   align-items: center;
   width: 450px;
   height: 600px;
+    h2,
+    h3,
+  p,
+  .remember,
+  .authLogin {
+    color: black;
+  }
   h3 {
     margin-bottom: 20px;
   }
@@ -205,6 +212,8 @@
     margin-bottom: 30px;
     button {
       width: 45%;
+      color: black;
+      border-color: black;
     }
   }
 }
