--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -5,11 +5,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: $greenBg;
+  background-color: $darkGreen;
   nav {
     position: relative;
     z-index: 10;
-    background-color: $greenBg;
+    background-color: $darkGreen;
+    color: white;
+  }
+  .subMenuParent a {
+    color: black;
+  }
+  a {
+    color: white;
+  }
+  button {
+    color: white;
+    border-color: transparent;
   }
 }
 .contactUsMap {
