--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -213,6 +213,9 @@ h1 {
   align-items: center;
   height: 180px;
   background-color: white;
+  p {
+    color: black;
+  }
   div {
     width: 100%;
     display: flex;
